feat/last changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Pygments==2.18.0
 pymongo==4.9.2
 python-dotenv==1.0.1
 python-multipart==0.0.12
+pytz==2024.2
 PyYAML==6.0.2
 rich==13.9.2
 shellingham==1.5.4
